fixing # of replicas

--- a/TestStatelessService/PackageRoot/Config/eventFlowConfig.json
+++ b/TestStatelessService/PackageRoot/Config/eventFlowConfig.json
@@ -18,7 +18,7 @@
   "outputs": [
     {
       "type": "ApplicationInsights",
-      "instrumentationKey": "***INSERT APP INSIGHTS KEY HERE***",
+      "instrumentationKey": "***INSERT AI INSTRUMENTATION KEY***",
       "filters": [
         {
           "type": "metadata",
